# ao_currency

./: 404.html  LICENSE  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  publish-pypi.yml
ao_currency/: __init__.py  cli.py  extenso.py  formatador.py  modelos.py  moeda.py  sanitizador.py
assets/js/: 0e384e19.7e0db901.js  1a20bc57.8eeba39f.js  393be207.64b5fbb9.js  4dd8e343.99451d0e.js  62870c3d.12311b7f.js  88c3d7f5.d221d1c6.js  c4f5d8e4.f99d8e9a.js  main.16490605.js  runtime~main.f8d0dc52.js
docs/cli/: index.html
docs/instalacao/: index.html
docs/intro/: index.html
docs/uso-basico/: index.html
docs_site/: docusaurus.config.js  package-lock.json
docs_site/docs/: cli.md  instalacao.md  intro.md  uso-basico.md
markdown-page/: index.html
