[project]
name = "ao_currency"
version = "0.1.0"
description = "Biblioteca profissional para manipulação de Moeda Angolana (Kwanza)"
authors = [
    {name = "Cornelio Teixeira", email = "cornelio.teixeira@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "pydantic>=2.0.0",
    "num2words>=0.5.12",
]

[project.urls]
Homepage = "https://github.com/cornelioteixeira/ao_currency"
Documentation = "https://cornelioteixeira.github.io/ao_currency/"
Repository = "https://github.com/cornelioteixeira/ao_currency.git"
Issues = "https://github.com/cornelioteixeira/ao_currency/issues"

[project.scripts]
ao-currency = "ao_currency.cli:main"

[tool.setuptools.packages.find]
include = ["ao_currency*"]
exclude = ["docs_site*", "tests*", "dist*", "build*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
